--- a/views/partials/agencyheader.handlebars
+++ b/views/partials/agencyheader.handlebars
@@ -2,6 +2,7 @@
   <ul class="nav nav-pills justify-content-end">
     <li class="nav-item"><a class="nav-link" href="/agency/home">Dashboard</a></li>
     <li class="nav-item"><a class="nav-link" href="/agency/myaccount">My Account</a></li>
+    <li class="nav-item"><a class="nav-link" href="/agency/bus">Buses</a></li>
     <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
   </ul>
 </nav>
