--- a/views/agency/viewbuses.handlebars
+++ b/views/agency/viewbuses.handlebars
@@ -2,7 +2,7 @@
 
 <div class="container-fluid detailscon">
     <h2 class="page-header">Buses</h2>
-    <div><a class="btn btn-primary" href="/agency/buses/add" role="button">Add New</a></div>
+    <div><a class="btn btn-primary" href="/agency/bus/add" role="button">Add New</a></div>
 </div>
 <div class="topgap">
 <table id="example" class="table accountstable table-striped table-bordered" cellspacing="0" width="100%">
