--- a/views/agency/addpackage.handlebars
+++ b/views/agency/addpackage.handlebars
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-lg-12">
       <h2 class="page-header">Add Package</h2>
-        <form method="post" action="/agency/package/add">
+        <form method="post" action="/agency/package/add" enctype="multipart/form-data">
           <div class="form-group">
             <label>Name</label>
             <input type="text" class="form-control" placeholder="Name" name="name" required>
@@ -36,7 +36,7 @@
           </div>
           <div class="form-group">
             <label>Image</label>
-            <input type="file" class="form-control-file" name="image" accept="image/*" required>
+            <input type="file" class="form-control-file" name="image" accept="image/jpeg" required>
           </div>
           <div class="form-group">
             <label>Cost ($) - Adult</label>
