--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,17 @@
   background-color: red;
 }
 
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.imagePackage{
+  height: 90%;
+  width: 90%;
+  margin-bottom: -1%;
+}
+
 body {
   padding-top: 20px;
   padding-bottom: 20px;
