--- a/views/agency/editpackage.handlebars
+++ b/views/agency/editpackage.handlebars
@@ -1,19 +1,28 @@
 {{> agencyheader}}
 
-<div class="container">
+<div class="container-fluid detailscon">
   <h2 class="page-header">Package Details</h2>
-  <div class="row">
-    <div class="col-lg-12">
-
     {{#print}}
-    <form method="post" action="/agency/package/add" enctype="multipart/form-data">
-      <div class="form-group">
+    <form method="post" class="form-row" action="/agency/package/{{id}}/save" enctype="multipart/form-data">
+      <div class="form-group col-md-6">
+        <label>Image</label>
+        <div class="imagePackage">
+          <img src="/uploads/{{image}}">
+        </div>
+        <input type="file" class="form-control-file" value="/uploads/{{image}}" name="image" accept="image/*">
+      </div>
+      <div class="col-md-6">
+        <div class="row">
+        <div class="col">
+          <button type="submit" class="btn btn-success">Save Changes</button>
+        </div>
+        <div class="col">
+           <a class="btn btn-danger" href="/agency/package/{{id}}/delete" role="button">Delete Package</a>
+        </div>
+      </div>
+      <div class="form-group status">
         <label>Name</label>
         <input type="text" readonly class="form-control" value="{{name}}" placeholder="Name" name="name" required>
-      </div>
-      <div class="form-group">
-        <label>Description</label>
-        <textarea type="text" class="form-control" value="{{description}}" placeholder="Description" name="description" rows="5" required></textarea>
       </div>
       <div class="form-group">
         <label>Tour Length (Hours)</label>
@@ -24,40 +33,38 @@
         <input type="text" class="form-control" value="{{departurelocation}}" placeholder="Departure Location" name="departurelocation" required>
       </div>
       <div class="form-group">
-        <label>Bus Name</label>
-        <select class="form-control" name="busname" required>
-          <option value=""></option>
-            {{#print}}
-            <option value="{{name}}">{{name}}</option>
-            {{/print}}
-        </select>
-      </div> 
-      <div class="form-group">
         <label>Departure Time</label>
         <input type="text" class="form-control" value="{{departuretime}}" placeholder="Departure Time" name="departuretime" required>
       </div>
-      
-      <div class="form-group">
-        <label>Image</label>
-        <img src="/uploads/{{image}}">
-        <input type="file" class="form-control-file" value="" name="image" accept="image/*" required>
       </div>
-      <div class="form-group">
+      <div class="form-group col-md-12">
+        <label>Description</label>
+        <textarea type="text" class="form-control" value="" placeholder="Description" name="description" rows="5" required>{{description}}</textarea>
+      </div>
+      
+      
+      <div class="form-group col-md-6">
         <label>Cost ($) - Adult</label>
         <input type="text" class="form-control" value="{{costadult}}" placeholder="Cost ($) - Adult" name="costadult" required>
       </div>
-      <div class="form-group">
+      <div class="form-group col-md-6">
         <label>Cost ($) - Child</label>
         <input type="text" class="form-control" value="{{costchild}}" placeholder="Cost ($) - Child" name="costchild" required>
       </div>
-      <div class="form-group">
+      <div class="form-group col-md-6">
       <label>Package Date</label>
-        <input type='text' id="packagedatepicker" value="{{packagedate}}" class="form-control"  name='packagedate' placeholder='YYYY-MM-DD' required>
+        <input type='text' id="packagedatepicker" value="{{moment packagedate format="YYYY-MM-DD"}}" class="form-control"  name='packagedate' placeholder='YYYY-MM-DD' required>
       </div>
-      <button type="submit" class="btn btn-success">Save</button>
-    </form>
     {{/print}}
-  </div>  
-   </div>
+      <div class="form-group col-md-6">
+        <label>Bus Name</label> 
+        <select class="form-control" name="busname" required>
+          {{!-- <option value="{{busname}}">{{busname}}</option> --}}
+          {{#print1}}
+              <option value="{{selectbusname}}">{{selectbusname}}</option>
+          {{/print1}}
+        </select>
+      </div> 
+    </form>
 </div>
 
